# ondine

./: .coverage  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  AZURE_USAGE_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bacon_analyzed_simple.parquet  batch_classification_optimized.py  codecov.yml  config_stage1_primary_category.yaml  config_stage2_subcategory.yaml  coverage.json  index.html  justfile  mkdocs.yml  multi_stage_classification_groq.py  multi_stage_classification_groq_with_caching.py  objects.inv  pyproject.toml  pyproject.toml.backup  sitemap.xml  titles_classified_multi_stage.csv  titles_classified_stage1.csv  titles_classified_stage2.csv  titles_classified_stage3.csv
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
SUMMARY/: index.html
api/: index.html
benchmarks/: bench_real_api.py
contributing/: index.html
crates/ondine-core/: Cargo.toml
crates/ondine-core/src/: lib.rs
crates/ondine-core/src/evidence/: contradiction.rs  grounding.rs  mod.rs  store.rs
crates/ondine-core/src/text/: mod.rs
crates/ondine-core/src/types/: mod.rs
crates/ondine-python/: Cargo.toml
crates/ondine-python/src/: lib.rs
docker/: Dockerfile  demo_observability.py  docker-compose.yml  profile.sh
docs/: README.md  SUMMARY.md  contributing.md  examples.md  index.md  technical_references.md
examples/: 15_custom_llm_provider.py  17_plugin_architecture_demo.py  19_azure_managed_identity_complete.py  20_prefix_caching.py  21_deduplication.py  README.md  azure_api_key_config.yaml  (+4 more)
(+420 files in other folders)
