[package]
name = "ondine-core"
version = "0.1.0"
edition = "2021"
description = "Ondine Context Store — evidence graph, TF-IDF grounding, hybrid search"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
